resources-examples/networkPolicies/networkPolicyAllowTraffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: netshoot
  ingress:
  - {}
