resources-examples/networkPolicies/networkPolicyExample.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: default
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          allow-access: "true"
  podSelector: {}
  policyTypes:
  - Ingress
